--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ digest = "0.10.3"
 bincode = "1.3.1"
 serde = { version = "1.0", features = ["derive"] }
 anyhow = "1.0.13"
+tiny-keccak = { version = "2.0", features = ["keccak"] }
+rocksdb = "0.18.0"
